Sat  Sep 25  2004	H. Wade Minter (minter@lunenburg.org)
     * Fixed a bug that prevented the holding tank from launching playlists.
     * Released Version 2.0.1 with this bugfix.

Fri  Sep 24  2004	H. Wade Minter (minter@lunenburg.org)
     * Finished updating documentation.
     * Released Version 2.0!

Tue  Sep 21  2004	H. Wade Minter (minter@lunenburg.org)
     * Print a status message when we fade-stop.

Sun  Sep 19  2004	H. Wade Minter (minter@lunenburg.org)
     * Use shift() instead of ($scalar) = @_ when we only care about one
       argument.

Sat  Sep 18  2004	H. Wade Minter (minter@lunenburg.org)
     * Add a --config flag to point to an alternate mrvoicerc.
     * Wrap the database SQL import in a transaction for efficency.
     * Replace spurious die() calls with status updates.
     * Add a tool, cpancheck.pl, to check CPAN for updates of the modules
       that Mr. Voice uses.
     * Removed obsolete tools.
     * Make it so that the top item in a search is always selected AND visible.

Fri  Sep 17  2004	H. Wade Minter (minter@lunenburg.org)
     * Get the move_tank function working with the HList.  Thanks to 
       Kyle at sickduck.org for the help.
     * Move the CWX-specific functions to their own branch.
     * Use a white background for the "Invalid" songs, too.
     * Apply the red color style to invalid songs in the holding tank, too.

Mon  Sep 13  2004	H. Wade Minter (minter@lunenburg.org)
     * Make nice white backgrounds by default for listboxes and entry 
       widgets.

Sun  Sep 12  2004	H. Wade Minter (minter@lunenburg.org)
     * Add a Publisher choice to the bulk_add routine.
     * Refactor a couple of looped database queries to use placeholders.
     * Use the same color for the Preview Song button (add new song window)
       as we do for the Play button.
     * Switch to a Tk::HList for the mainbox and the holding tank.

Sat  Sep 11  2004	H. Wade Minter (minter@lunenburg.org)